backend-controllers-incompleto+models-cambios

--- a/virtual-gaming/src/main/resources/application.properties
+++ b/virtual-gaming/src/main/resources/application.properties
@@ -1,1 +1,33 @@
+server.port = 9000
 
+# Datasource properties
+spring.datasource.url=jdbc:h2:./db/database
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Habilitamos la consola de H2
+spring.h2.console.enabled=true
+
+# Generamos el DDL
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# Evitamos este antipatrón
+spring.jpa.open-in-view=false
+
+# Secreto para la encriptación
+JWT_SECRET=LaAvispaSocrática
+
+# Número de rondas utilizadas para el algoritmo de hashing de la contraseña
+BCRYPT_ROUNDS=12
+
+# Vida del token
+JWT_LIFETIME=3
+
+#Vida del token de refresco
+REFRESH_JWT_LIFETIME=10
+
+#Imagenes Lo meto aquí por tenerlo accesible
+#Windows -> setx IMGUR_CLIENTID caa3db3376d731b
+#Unix -> export IMGUR_CLIENTID=caa3db3376d731b
+#CliencId=caa3db3376d731b
+#ClienteSecret=9ab1fcb4d620fc49e2ef22b670c633d78cc18e06
