--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -12,10 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.VirtualGaming"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.videojuegoDetalles.VideojuegoDetailsActivity"></activity>
+        <activity android:name=".ui.videojuegoDetalles.VideojuegoActivity"></activity>
+        <activity android:name=".ui.videojuegoDetalles.VideojuegoDetailsActivity" />
         <activity
             android:name=".ui.registro.RegisterActivity"
-            android:label="@string/title_activity_register"></activity>
+            android:label="@string/title_activity_register" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login">
@@ -27,7 +28,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
