Error de perfil solucionado,consulta agregada a la API para la edicion de perfil en UsuarioController y Nuevo activity para la edicion del perfil de usuario en el app android, consultas al api de listados de procesador para luego meterlos en un spinner en el app

--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.VirtualGaming"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.ordenador.OrdenadorActivity"></activity>
+        <activity android:name=".ui.EditPerfil.EditPerfilActivity"></activity>
+        <activity android:name=".ui.miPerfil.MiPerfilActivity" />
+        <activity android:name=".ui.ordenador.OrdenadorActivity" />
         <activity android:name=".ui.videojuegoDetalles.VideojuegoDetailsActivity" />
         <activity
             android:name=".ui.registro.RegisterActivity"
