ahora se puede crear un ordenador sin problemas, añadi en el menu el boton de ordenadores para poder ver el listado de ordenadores creados y agregue la funcion de eliminar un ordenador

--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.VirtualGaming"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.EditPerfil.EditPerfilActivity"></activity>
+        <activity android:name=".ui.OrdenadorDetalle.OrdenadorDetalleActivity"></activity>
+        <activity android:name=".ui.EditPerfil.EditPerfilActivity" />
         <activity android:name=".ui.miPerfil.MiPerfilActivity" />
         <activity android:name=".ui.ordenador.OrdenadorActivity" />
         <activity android:name=".ui.videojuegoDetalles.VideojuegoDetailsActivity" />
